--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,18 +6,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/pqnhhh/Documents/GitHub\n",
-      "/Users/pqnhhh/Documents/GitHub\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "pybullet build time: Sep  3 2024 12:59:12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/pqnhhh/Documents/GitHub\n"
      ]
     }
    ],
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,73 +43,91 @@
      "text": [
       "========== Round 0 ==========\n",
       "----- Thought ----- \n",
-      "To design a one-leg table, I first need to obtain a general description of the table's structure. Then, I will select suitable blocks that can represent the components of a table, namely a flat top and a single leg. Once I have the selected blocks, I will decide their positions to create the final assembly.\n",
+      "To begin with, I will need to get a description of the tree since this information is essential for selecting the appropriate blocks and their arrangement. Based on the typical structure of a tree, it generally has a trunk and branches or canopy. I'll consider using cuboid blocks for the trunk and maybe larger blocks or cylinders for the canopy.\n",
       "----- Plan ----- \n",
-      "Step 1: Get the general description of the one-leg table.\n",
-      "Step 2: Plan which blocks to use to represent the one-leg table.\n",
-      "Step 3: Decide the position of the blocks to assemble the one-leg table.\n",
-      "Step 4: Return the json format of the design.\n",
+      "Step 1: Get the general description of the tree.\n",
+      "Step 2: Plan which blocks to use to represent the tree trunk and canopy.\n",
+      "Step 3: Decide the position of the blocks to construct the tree.\n",
+      "Step 4: Return the blocks position.\n",
       "----- Code ----- \n",
-      "def execute_command(object_name, feed_back_image):\n",
+      "def execute_command(object_name, positions, structure_img):\n",
       "    # Initialize the structure\n",
-      "    table = IsometricImage(object_name, feed_back_image)\n",
-      "    # Step 1: Get the general description of the one-leg table.\n",
-      "    description = table.describe_object(structure_dir=\"one_leg_table\", iter=1)\n",
-      "    # Step 2: Plan which blocks to use to represent the one-leg table.\n",
-      "    plan = table.make_plan(description, structure_dir=\"one_leg_table\", iter=1)\n",
-      "    # Step 3: Decide the position of the blocks to assemble the one-leg table.\n",
-      "    stacking_order = table.order_blocks(structure_dir=\"one_leg_table\", plan=plan, iter=1)\n",
-      "    positions = table.decide_position(structure_dir=\"one_leg_table\", order=stacking_order, iter=1)\n",
-      "    # Step 4: Return the json format of the design.\n",
-      "    return positions\n",
+      "    tree = IsometricImage(object_name, positions, structure_img)\n",
+      "    # Step 1: Get the general description of the tree.\n",
+      "    description = tree.describe_object(iter=0)\n",
+      "    # Step 2: Plan which blocks to use to represent the tree trunk and canopy.\n",
+      "    plan = tree.make_plan(description, iter=0)\n",
+      "    # Step 3: Decide the position of the blocks to construct the tree.\n",
+      "    order = tree.order_blocks(plan, iter=0)\n",
+      "    positions = tree.decide_position(order, iter=0)\n",
+      "    # Step 4: Return the blocks position.\n",
+      "    return {\"positions\": positions}\n",
       "Executing code...\n",
-      "Successfully saved data to one_leg_table/context/description_1_context.json\n",
-      "Successfully saved data to one_leg_table/context/main_plan_1_context.json\n",
-      "Successfully saved data to one_leg_table/context/order_plan_1_context.json\n",
-      "Successfully saved data to one_leg_table/context/decide_position_1_context.json\n",
-      "\n",
-      "==================================================\n",
-      "COMPONENT 1: table_leg\n",
-      "==================================================\n",
-      "- Shape: cylinder\n",
-      "- Dimensions:\n",
-      "  + radius: 20 m\n",
-      "  + height: 40 m\n",
-      "- Color (RGBA): R=0.5, G=0.5, B=0.5, A=1\n",
-      "- Position:\n",
-      "  + x: 0 m\n",
-      "  + y: 0 m\n",
-      "- Rotation (yaw): 0 rad\n",
-      "\n",
-      "==================================================\n",
-      "COMPONENT 2: tabletop\n",
-      "==================================================\n",
-      "- Shape: cuboid\n",
-      "- Dimensions:\n",
-      "  + x: 90 m\n",
-      "  + y: 70 m\n",
-      "  + z: 20 m\n",
-      "- Color (RGBA): R=0.5, G=0.5, B=0.5, A=1\n",
-      "- Position:\n",
-      "  + x: 0 m\n",
-      "  + y: 0 m\n",
-      "- Rotation (yaw): 0 rad\n",
-      "\n",
-      "--------------------------------------------------\n",
-      "Total components: 2\n",
-      "Output saved to one-leg-table_result.json\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "Observer.__call__() missing 1 required positional argument: 'image_path'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m query = \u001b[33m\"\u001b[39m\u001b[33mone leg table\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      8\u001b[39m feed_back_image = Image.open(os.path.join(BASE_PATH, \u001b[33m\"\u001b[39m\u001b[33mimgs/block.png\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m save_path = \u001b[43mdesignmas\u001b[49m\u001b[43m.\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeed_back_image\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/multi-agent-block-desgin/src/agent/block_design_mas.py:74\u001b[39m, in \u001b[36mBlockDesignMAS.query\u001b[39m\u001b[34m(self, query, feed_back_image)\u001b[39m\n\u001b[32m     71\u001b[39m         out_str = print_dict(out)\n\u001b[32m     72\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mOutput saved to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mobject_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_result.json\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m     \u001b[38;5;28mself\u001b[39m.observation = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mobserver\u001b[49m\u001b[43m(\u001b[49m\u001b[43mout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     75\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[32m5\u001b[39m*\u001b[33m'\u001b[39m\u001b[33m-\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mObservation\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m5\u001b[39m*\u001b[33m'\u001b[39m\u001b[33m-\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m + \u001b[38;5;28mself\u001b[39m.observation)\n\u001b[32m     77\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
-      "\u001b[31mTypeError\u001b[39m: Observer.__call__() missing 1 required positional argument: 'image_path'"
+      "Successfully saved data to /Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/gpt_caching/tree/context/description_0_context.json\n",
+      "Successfully saved data to /Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/gpt_caching/tree/context/main_plan_0_context.json\n",
+      "Successfully saved data to /Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/gpt_caching/tree/context/order_plan_0_context.json\n",
+      "Successfully saved data to /Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/gpt_caching/tree/context/decide_position_0_context.json\n",
+      "Output saved to final_results/positions/tree_result.json\n",
+      "----- Observation ----- \n",
+      "The returned positions and characteristics of the blocks are in the correct format. The design includes a cuboid base named 'trunk' and additional components forming a specific structure with 'canopy_base', 'canopy_middle', and 'canopy_top'. Ensure that the current design stage focuses on validating structural stability and proper support of the canopy layers by the trunk to prevent toppling.\n",
+      "========== Round 1 ==========\n",
+      "----- Thought ----- \n",
+      "The design has been successfully planned with a trunk and canopy layers. The trunk supports the canopy layers, so I need to focus on assembling the blocks in a stable configuration and ensure the structure's stability in the simulation.\n",
+      "----- Plan ----- \n",
+      "Step 1: Place the blocks in the simulation according to the ordered positions for the trunk and canopy layers.\n",
+      "Step 2: Refine the structure by checking the stability of the tree with its trunk and canopy configurations.\n",
+      "Step 3: Get the image of the design after refining to visualize the assembly.\n",
+      "Step 4: Return the positions, the current stability status, and the image after refining.\n",
+      "----- Code ----- \n",
+      "def execute_command(object_name, positions, structure_img):\n",
+      "    # Initialize the structure\n",
+      "    tree = IsometricImage(object_name, positions, structure_img)\n",
+      "    # Step 1: Place the blocks in the simulation according to the ordered positions for the trunk and canopy layers.\n",
+      "    tree.make_structure(tree.positions)\n",
+      "    # Step 2: Refine the structure by checking the stability of the tree with its trunk and canopy configurations.\n",
+      "    stable = tree.refine_structure(tree.blocks)\n",
+      "    # Step 3: Get the image of the design after refining to visualize the assembly.\n",
+      "    img = tree.get_structure_image()\n",
+      "    # Step 4: Return the positions, the current stability status, and the image after refining.\n",
+      "    return {\"positions\": tree.positions, \"is_stable\": stable, \"image\": img}\n",
+      "Executing code...\n",
+      "Successfully saved data to /Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/imgs/structures/tree/tree.json\n",
+      "Output saved to final_results/positions/tree_result.json\n",
+      "----- Observation ----- \n",
+      "The design process is in the middle stages, building and refining. The positional data is correctly formatted, indicating a well-structured arrangement of blocks. The structure is stable, with all blocks properly positioned and supported. Additionally, a visual representation of the structure has been successfully generated. The design is ready for the next stage.\n",
+      "========== Round 2 ==========\n",
+      "----- Thought ----- \n",
+      "Given the previous planning and the Observer output, the current structure is stable and properly visualized. Now, I need to gather additional information about the structure and get a rating to ensure it's valid before completing the design.\n",
+      "----- Plan ----- \n",
+      "Step 1: Make the structure from the positions to confirm its stability.\n",
+      "Step 2: Get the detailed information of the structure.\n",
+      "Step 3: Get the rating of the structure to assess its design quality.\n",
+      "Step 4: Save the structure to finalize the design.\n",
+      "----- Code ----- \n",
+      "def execute_command(object_name, positions, structure_img):\n",
+      "    # Initialize the structure\n",
+      "    structure = IsometricImage(object_name, positions, structure_img)\n",
+      "    # Step 1: Make the structure from the positions to confirm its stability.\n",
+      "    structure.make_structure(structure.positions)\n",
+      "    # Step 2: Get the detailed information of the structure.\n",
+      "    structure_info = structure.get_structure_info()\n",
+      "    # Step 3: Get the rating of the structure to assess its design quality.\n",
+      "    rating_info = structure.get_structure_rating()\n",
+      "    # Step 4: Save the structure to finalize the design.\n",
+      "    structure.save_structure()\n",
+      "    return {\"info\": structure_info, \"rating\": rating_info}\n",
+      "Executing code...\n",
+      "Successfully saved data to /Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/imgs/structures/tree/tree.json\n",
+      "Successfully saved data to /Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/gpt_caching/tree/context/structure_info_0_context.json\n",
+      "Successfully saved data to /Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/gpt_caching/tree/context/structure_rating_0_context.json\n",
+      "----- Observation ----- \n",
+      "The structure is valid. The evaluation shows a rating of 4/5, indicating good resemblance to the target object. The info shows that the guesses include tree, plant, bush, cactus, etc., suggesting the design is close to a tree-like structure. The structure effectively uses a limited set of blocks to mimic a tree with a clear trunk and foliage representation. The overall appearance is coherent, and the design is easily recognizable as a tree.\n",
+      "========== Round 3 ==========\n",
+      "----- Thought ----- \n",
+      "The structure has been confirmed stable, and it resembles a tree effectively with a good rating. I need to finalize the design and return it to the user.\n",
+      "----- Plan ----- \n",
+      "Step 1: Save the structure to finalize the design.\n",
+      "Step 2: Return to user.\n"
      ]
     }
    ],
@@ -121,9 +138,10 @@
     "sys.path.append(BASE_PATH)\n",
     "with warnings.catch_warnings():\n",
     "    warnings.simplefilter(\"ignore\")\n",
-    "    query = \"one leg table\"\n",
-    "    feed_back_image = Image.open(os.path.join(BASE_PATH, \"imgs/block.png\"))\n",
-    "    save_path = designmas.query(query, feed_back_image)"
+    "    query = \"Tree\"\n",
+    "    positions='/Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/final_results/positions/tree_result.json'\n",
+    "    structure_img = '/Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/imgs/structures/tree/tree_isometric.png'\n",
+    "    save_path = designmas.query(query, positions = positions, structure_img=structure_img)"
    ]
   }
  ],
