--- a/demo.ipynb
+++ b/demo.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,12 +129,20 @@
       "Step 1: Save the structure to finalize the design.\n",
       "Step 2: Return to user.\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
     "designmas = BlockDesignMAS(api_file=\"api_key.txt\", max_round=5)\n",
     "import os\n",
-    "BASE_PATH = os.getcwd()  # Hoặc có thể cần đi lên vài cấp thư mục\n",
+    "BASE_PATH = os.getcwd()\n",
     "sys.path.append(BASE_PATH)\n",
     "with warnings.catch_warnings():\n",
     "    warnings.simplefilter(\"ignore\")\n",
@@ -143,6 +151,13 @@
     "    structure_img = '/Users/pqnhhh/Documents/GitHub/multi-agent-block-desgin/imgs/structures/tree/tree_isometric.png'\n",
     "    save_path = designmas.query(query, positions = positions, structure_img=structure_img)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
